[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sanctum"
version = "0.1.0"
authors = [
  { name="Cilmoy", email="contact@sanctumllc.com" },
]
description = "Institutional-grade equity screening and analysis terminal"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "vaderSentiment>=3.3.2",
]

[project.scripts]
sanctum = "sanctum.sanctum:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sanctum*"]
